# x2fromx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject copy.toml  pyproject.toml
.github/workflows/: publish.yml
src/x2fromx/: __init__.py  _ascii.py  _version.py  builder.py  cli.py  scanner.py
tests/: test_x2fromx.py
