[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x2fromx"
version = "0.1.1"
description = "CLI & library to convert project directories ↔ text trees. Ideal for AI scaffolding & codebase analysis."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "TakoUlzO / Erabytse", email = "fbfconsulting.org"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
x2fromx = "x2fromx.cli:main"

[project.urls]
"Homepage" = "https://github.com/TonUser/x2fromx"
"Bug Tracker" = "https://github.com/TonUser/x2fromx/issues"